@@ -2110,3 +2110,16 @@ FORMULA_MANARECOVER=25+((@x2/12.0)+(((@x1/6.0)<5) - (@xx*@x3/2.0) - (@xx*@x4/2.0
 # Default is:        25+((@x2/5.0)+((@x1/1.5) - (@xx*@x3/2.0) - (@xx*@x4/2.0) - (@xx*@x5/2.0)) + (@xx*@x6*.7) + (@xx/4.0*@x7) + (@xx/4.0*@x8) - (@xx/2.0*@x9))
 FORMULA_MOVESRECOVER=25+((@x2/5.0)+(((@x1/1.5)<16) - (@xx*@x3/2.0) - (@xx*@x4/2.0) - (@xx*@x5/2.0)) + (@xx*@x6*.7) + (@xx/4.0*@x7) + (@xx/4.0*@x8) - (@xx/2.0*@x9))
 
+# FORMULA_TOTALCOMBATXP is the total amount of experience to award to a set of killers for 
+# a single victim.  The 'dividers' are a subset of killers list.
+# @x1=number of dividers, @x2=sum of all (each dividers level squared), 
+# @x3=sum of all divider levels, @x4=number of killers
+FORMULA_TOTALCOMBATXP=100 + ((25*@x1) - (@x1*((25*@x1)^.5)))
+
+# FORMULA_INDCOMBATXP is the share of the total combat experience to award to an 
+# individual killer who contributed in the fight.
+# The 'dividers' are a subset of killers list.
+# @x1=total combat experience pool, @x2=killers level, squared,
+# @x3=sum of all (each dividers level squared), @x4=killers level
+# @x4=sum of all dividers levels, @x5=total number of killers
+FORMULA_INDCOMBATXP=(@x1 * (@x2 / @x3)) < 100
