@@ -1384,6 +1384,18 @@
 		<FONT COLOR=WHITE>@INIValue?MASK=FORMULA_DAMAGEMELEESTATIC&INIHELP@
 		</TD></TR>
 		
+		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>TOTAL COMBAT XP</FONT></TD><TD WIDTH=80% VALIGN=TOP>
+		<TEXTAREA NAME=FORMULA_TOTALCOMBATXP COLS=60 ROWS=2>@INIValue?MASK=FORMULA_TOTALCOMBATXP&VALUE@</TEXTAREA>
+		<BR>
+		<FONT COLOR=WHITE>@INIValue?MASK=FORMULA_TOTALCOMBATXP&INIHELP@
+		</TD></TR>
+		
+		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>IND. COMBAT XP</FONT></TD><TD WIDTH=80% VALIGN=TOP>
+		<TEXTAREA NAME=FORMULA_INDCOMBATXP COLS=60 ROWS=2>@INIValue?MASK=FORMULA_INDCOMBATXP&VALUE@</TEXTAREA>
+		<BR>
+		<FONT COLOR=WHITE>@INIValue?MASK=FORMULA_INDCOMBATXP&INIHELP@
+		</TD></TR>
+		
 		</TABLE>
 	@endif@
 	@if?CheckReqParm?INIPAGE=MISC@
