@@ -6,6 +6,7 @@
    4. RESET RELEVEL tool added to refactor an areas level range.
    5. New skills: Studying, Tagging, Organizing
    6. Areas can now be unloaded.  And then loaded back again.  See UNLOAD and LOAD.
+   7. New FORMULA_s in the coffeemud.ini for total and individual combat experience.
 
 # Build 5.9.5 Release 04/10/2017
    *. Database Schema Updated for CMGRAC.  See the Installation Guide about running DBUpgrade.
